# roslyn-graph

./: .gitignore  README.md  RoslynToRdf.sln
.github/workflows/: ci.yml
.serena/: project.yml
crates/rust2rdf/: Cargo.toml
crates/rust2rdf/src/: lib.rs  main.rs
crates/rust2rdf/src/emitter/: mod.rs  ntriples.rs  turtle.rs
crates/rust2rdf/src/extraction/: extractor.rs  mod.rs  rustdoc_loader.rs  rustdoc_model.rs
crates/rust2rdf/src/model/: iri.rs  mod.rs  ontology.rs
crates/rust2rdf/tests/: cli_tests.rs  emitter_tests.rs  extractor_tests.rs  iri_tests.rs  loader_tests.rs  rustdoc_model_tests.rs
crates/rust2rdf/tests/fixture-crate/: Cargo.toml
crates/rust2rdf/tests/fixture-crate/src/: lib.rs
crates/rust2rdf/tests/fixtures/: fixture_crate.json
ontology/: dotnet-extensions.ttl  dotnet-types.ttl  rust-extensions.ttl  type-graph.ttl
src/RoslynToRdf.Cli/: Program.cs  RoslynToRdf.Cli.csproj
src/RoslynToRdf.Core/: RoslynToRdf.Core.csproj
src/RoslynToRdf.Core/Emitters/: ITriplesEmitter.cs  NTriplesEmitter.cs  TurtleEmitter.cs
src/RoslynToRdf.Core/Extraction/: AssemblyGraphExtractor.Helpers.cs  AssemblyGraphExtractor.Members.cs  AssemblyGraphExtractor.cs  AssemblyLoader.cs  ExtractionOptions.cs  XmlDocParser.cs
src/RoslynToRdf.Core/Model/: DotNetOntology.cs  IriMinter.cs
tests/RoslynToRdf.Tests/: AssemblyGraphExtractorTests.cs  AssemblyLoaderTests.cs  CliIntegrationTests.cs  EmittersTests.cs  IriMinterTests.cs  RoslynToRdf.Tests.csproj  TestEmitter.cs  TestUtilities.cs  XmlDocParserTests.cs
viewer/: explorer.html
