[package]
name = "rust2rdf"
version = "0.1.0"
edition = "2021"
description = "Extract Rust crate type graphs to RDF format"

[[bin]]
name = "rust2rdf"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
percent-encoding = "2"

[dev-dependencies]
tempfile = "3"
